service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jenkins-lab
  namespace: jenkins-lab
spec:
  selector:
    app: jenkins-lab
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
