ingress.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: jenkins-lab
  namespace: jenkins-lab
spec:
  to:
    kind: Service
    name: jenkins-lab
  port:
    targetPort: 8080
  tls:
    termination: edge
